# toy-loadgen

./: Cargo.toml  README.md
src/: main.rs
src/core/: mod.rs
src/errors/: mod.rs
src/results/: mod.rs
