[package]
name = "toy-loadgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
hyper = { version = "1.3.1", features = ["client", "http2"] }
# We probably don't need the _full_ features
# We probably don't need the _full_ features
hyper-util = { version = "0.1.5", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = "0.27.2"
tokio-rustls = "0.26.0"
rustls = "0.23.10"
rustls-pki-types = "1.7.0"
webpki-roots = "0.26.3"
h2 = "0.4.5"
