[package]
name = "toy-loadgen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
hyper = { version = "1.3.1", features = ["client", "http2"] }

# We probably don't need the _full_ features
# Opting for the required features only will make a smaller binary
hyper-util = { version = "0.1.5", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.2"
time = "0.3.36"
